[package]
name = "rip"
version = "0.3.1"
edition = "2021"

[dependencies]
anyhow = "1"
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
dialoguer = { version = "0.11", features = ["fuzzy-select"] }
dirs = "5"
num-format = "0.4"
quick-xml = "0.31"
rand = "0.8"
reqwest = { version = "0.12", features = ["json", "gzip", "brotli", "deflate", "rustls-tls", "cookies"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
